--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,23 +4,23 @@ pipeline {
         stage('Build')
             {
             steps{
-                echo "build completed successful..."
+                echo "build completed successful"
                  }
             }
         stage('Test'){
             steps{
-                echo "test completed successful..."
+                echo "test completed successful"
                 }
 
                     }
         stage('Package'){
             steps{
-                echo "package completed successful..."
+                echo "package completed successful"
                 }
                 }
         stage('Deploy'){
             steps{
-                echo "deploy completed successful..."
+                echo "deploy completed successful"
                 }
                 }
             }
